tests/snapshots/parser__numbers__call_with_int_arg.snap
---
source: tests/parser.rs
expression: "parse(\"print(42)\")"
---
Ok(
    [
        Expr(
            Call {
                callee: Identifier(
                    "print",
                    Span {
                        start: 0,
                        end: 5,
                    },
                ),
                args: [
                    Int(
                        42,
                        Span {
                            start: 6,
                            end: 8,
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 9,
                },
            },
        ),
    ],
)
