tests/snapshots/parser__numbers__float_literal.snap
---
source: tests/parser.rs
expression: "parse(\"3.14\")"
---
Ok(
    [
        Expr(
            Float(
                3.14,
                Span {
                    start: 0,
                    end: 4,
                },
            ),
        ),
    ],
)
